# IAS_Nov-24_WS

./: APF.py  CMakeLists.txt  README.md
Franka Emica Panda/: pyramid_code.py
Robodog Go1/: README.md  Steps to Connecting Robodog to Internet.txt
Robodog Go1/Manipulator/: Move it.txt  Steps to Connecting Robodog to Internet.txt
Robodog Go1/ros_unitree_moving/: CMakeLists.txt  package.xml
Robodog Go1/ros_unitree_moving/launch/: all_nodes.launch
Robodog Go1/ros_unitree_moving/scripts/: PathPlanning_HS.py  PathPlanning_edge_cases.py  PathPlanning_states.py  move_robot_HS.py  move_robot_modified.py  move_robot_states.py  obstacles.py
TurtleBot3/: README.md
TurtleBot3/Scenario/src/: Scenario (farfar).py  Scenario.py  Scenario1.py  Scenario4.py
TurtleBot3/turtlebot3_manipulation/: README.MD
TurtleBot3/turtlebot3_manipulation/MiroSheesho/: CMakeLists.txt
TurtleBot3/turtlebot3_manipulation/MiroSheesho/include/MiroSheesho/: qnode.hpp
TurtleBot3/turtlebot3_manipulation/MiroSheesho/src/: qnode.cpp  test.cpp
TurtleBot3/turtlebot3_manipulation/turtlebot3_manipulator_control/: setup.py  (+1 more)
TurtleBot3/turtlebot_architecture/: CMakeLists.txt
scenario/: package.xml
scenario/src/: Scenario.py
sim_turtle_bot/: CMakeLists.txt  my_launch_file.launch  package.xml
turtlebot3_manipulation/MiroSheesho/: package.xml
turtlebot3_manipulation/turtlebot3_manipulator_control/: package.xml
turtlebot_architecture/: package.xml
turtlebot_architecture/Launch/: Turtlecontrol1.launch
turtlebot_architecture/src/: APF.py  GoalSender.py  STOP.py  color_detection_node.py
(+15 files in other folders)
